@@ -1,7 +1,7 @@
 LTL3 Tools NEWS
 -=-=-=-=-=-=-=-
 
-Under development                       LTL3 tools 0.0.6
+Tue Feb 17 09:41:44 EST 2009            LTL3 tools 0.0.6
 
 - Major performance improvements
 
